--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <script src="https://unpkg.com/scrollreveal"></script>
-  <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description"content="Douglas Drozda - Web Develop" />
+    <link rel="shortcut icon" href="./Douglas_drozda Icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cantarell&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
-  <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
-
-  <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
-
-  <script>var Alert = ReactBootstrap.Alert;</script>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cantarell&display=swap" rel="stylesheet">
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-  integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-  crossorigin="anonymous"
-/>
-  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-  <title>DouglasDrozda</title>
-</head>
+    <title>Douglas Drozda</title>
+  </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -32,3 +21,5 @@
 </body>
 
 </html>
+
+
